{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 18,
  "lineage": "54e4fbe5-3a25-511b-796e-042a93a00c9f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "inder-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ed8acf6611c1b7f5",
            "arn": "arn:aws:ec2:ap-southeast-1:286501333631:elastic-ip/eipalloc-0ed8acf6611c1b7f5",
            "association_id": "eipassoc-000a8c279179e61c5",
            "domain": "vpc",
            "id": "eipalloc-0ed8acf6611c1b7f5",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0c57667e0cf61a1cd",
            "private_dns": "ip-10-0-1-83.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.83",
            "public_dns": "ec2-47-128-0-14.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "47.128.0.14",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "inder-eip"
            },
            "tags_all": {
              "Name": "inder-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "inder-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0543dbdaf4e114be7",
            "arn": "arn:aws:ec2:ap-southeast-1:286501333631:instance/i-07adf1dda522c2b9d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07adf1dda522c2b9d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "inder-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c6328fac660eda27",
            "private_dns": "ip-10-0-1-21.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.21",
            "public_dns": "ec2-54-151-240-244.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.151.240.244",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09805e32919ed0fb6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-044a06db01ec6f359",
            "tags": {
              "Name": "inder-ec2"
            },
            "tags_all": {
              "Name": "inder-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e6c3806aa0008647"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.inder-key",
            "aws_security_group.inder-sg",
            "aws_subnet.inder-pub-sb",
            "aws_vpc.inder-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "inder-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:286501333631:internet-gateway/igw-03291c3e9976139e0",
            "id": "igw-03291c3e9976139e0",
            "owner_id": "286501333631",
            "tags": {
              "Name": "inder-igw"
            },
            "tags_all": {
              "Name": "inder-igw"
            },
            "vpc_id": "vpc-059cb069fedb40cb2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.inder-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "inder-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ed8acf6611c1b7f5",
            "association_id": "eipassoc-000a8c279179e61c5",
            "connectivity_type": "public",
            "id": "nat-055e1fbe025e0f911",
            "network_interface_id": "eni-0c57667e0cf61a1cd",
            "private_ip": "10.0.1.83",
            "public_ip": "47.128.0.14",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-044a06db01ec6f359",
            "tags": {
              "Name": "inder-nat-gw"
            },
            "tags_all": {
              "Name": "inder-nat-gw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.inder-eip",
            "aws_subnet.inder-pub-sb",
            "aws_vpc.inder-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "inder-pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:286501333631:route-table/rtb-058a5604a71dd556f",
            "id": "rtb-058a5604a71dd556f",
            "owner_id": "286501333631",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03291c3e9976139e0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "inder-pub-rt"
            },
            "tags_all": {
              "Name": "inder-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-059cb069fedb40cb2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.inder-igw",
            "aws_vpc.inder-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "inder-pub-rt-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0967df97d0a847947",
            "route_table_id": "rtb-058a5604a71dd556f",
            "subnet_id": "subnet-044a06db01ec6f359"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.inder-igw",
            "aws_route_table.inder-pub-rt",
            "aws_subnet.inder-pub-sb",
            "aws_vpc.inder-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "inder-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:286501333631:security-group/sg-0e6c3806aa0008647",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0e6c3806aa0008647",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "inder-sg",
            "name_prefix": "",
            "owner_id": "286501333631",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "inder-sg"
            },
            "tags_all": {
              "Name": "inder-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-059cb069fedb40cb2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.inder-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "inder-pub-sb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:286501333631:subnet/subnet-044a06db01ec6f359",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044a06db01ec6f359",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "286501333631",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "inder-pub-sb"
            },
            "tags_all": {
              "Name": "inder-pub-sb"
            },
            "vpc_id": "vpc-059cb069fedb40cb2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.inder-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "inder-pvt-sb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:286501333631:subnet/subnet-038653491da22c808",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038653491da22c808",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "286501333631",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "inder-pvt-sb"
            },
            "tags_all": {
              "Name": "inder-pvt-sb"
            },
            "vpc_id": "vpc-059cb069fedb40cb2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.inder-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "inder-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:286501333631:vpc/vpc-059cb069fedb40cb2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0682086ad218135b2",
            "default_route_table_id": "rtb-0816c0fff595c1698",
            "default_security_group_id": "sg-04a9b95b25e748ccc",
            "dhcp_options_id": "dopt-06903b3576f5485ce",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-059cb069fedb40cb2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0816c0fff595c1698",
            "owner_id": "286501333631",
            "tags": {
              "Name": "inder-vpc"
            },
            "tags_all": {
              "Name": "inder-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}